fixed layout issues on form, added over events to buttons

--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -12,7 +12,9 @@
     background-color: var(--yellowColor);
     border-radius: 15px;
     padding: 8px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+.dash-nav-container button:hover{
+    box-shadow: var(--boxShadow);
 }
 .dash-nav-container button a{
     text-decoration: none;
