--- a/client/src/assets/css/deckStack.css
+++ b/client/src/assets/css/deckStack.css
@@ -16,17 +16,22 @@
     border-radius: 18px;
     border-left:#235711  5px solid;
     box-shadow: var(--boxShadow);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
+
 .innerDeckStack{
+
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 24px;
+    background-color: var(--blueColor);
     margin-left: 5px;
     width: 270px;
     height: 130px;
     border-radius: 18px;
     border-left:var(--brownColor) solid 3px;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; 
 }
 .innerDeckStack:hover{
     box-shadow: var(--boxShadow);
@@ -35,4 +40,5 @@
 }
 .outerDeckStack:hover{
     box-shadow:  3px 3px 3px rgba(0, 0, 0, 0.5);;
+    background-color: rgb(198, 202, 203);
 }
