--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -41,10 +41,14 @@
     align-items: baseline;
 }
 .nav-links-container button{
+    transition: box-shadow 0.3s ease;
     max-width: 70%;
     max-height: 60px;
     border-radius: 10px;
     padding: 5px;
+}
+.nav-links-container button:hover{
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
 }
 .nav-links-container > :nth-child(even) {
     background-color: var(--yellowColor);
